Fix Overflow In MiniView & Dashboard Constraints

--- a/frontend/src/components/dashboard/miniview.css
+++ b/frontend/src/components/dashboard/miniview.css
@@ -1,7 +1,7 @@
 .dashboard {
-  padding: 3vh 3%;
+  padding: 3vh 1vw;
   display: flex;
-  gap: 2%;
+  gap: 1.5%;
   align-items: flex-start;
   background-color: #d9d9d9;
 }
@@ -11,7 +11,7 @@
   grid-template-rows: 4rem 1fr;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   background-color: #ffffff;
-  flex: 0 0 49%;
+  flex: 0 0 49.25%;
 }
 
 .dashboard .head-container {
@@ -46,8 +46,8 @@
   grid-template-rows: 1fr;
   height: calc(94vh - 4rem);
   gap: 0.5rem;
-  overflow: auto;
-  overflow-y: scroll;
+  word-wrap: break-word;
+  overflow-y: auto;
 }
 
 .dashboard .miniview-email-container {
@@ -60,6 +60,7 @@
 .dashboard .from {
   padding: 0.5rem 0 0.5rem 1rem;
   flex: 0 0 10vw;
+  overflow: hidden;
 }
 
 .dashboard .median {
