--- a/frontend/src/components/dashboard/weightedEmailList.css
+++ b/frontend/src/components/dashboard/weightedEmailList.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  flex: 0 0 49%;
+  flex: 0 0 49.25%;
   overflow: auto;
   overflow-y: scroll;
 }
